# ryzen-giveaway

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: giveaway.rs  mod.rs
src/helpers/: credentials_helper.rs  database_helper.rs  giveaway_helper.rs  mod.rs
src/reactions/: giveaway.rs  mod.rs  reaction_handler.rs
src/structures/: cmd_data.rs  commands.rs
systemd/: kinggiveaway.service
